# python-web

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.toml  docker-compose.prod.yml  pyproject.toml
.github/workflows/: ci.yml
.trellis/: .template-hashes.json
.trellis/spec/backend/: database-guidelines.md  directory-structure.md  error-handling.md  logging-guidelines.md  quality-guidelines.md
.trellis/spec/frontend/: quality-guidelines.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/07-02-localize-web-ui-chinese/: prd.md  task.json
.trellis/tasks/07-02-python-management-platform/: check.jsonl  design.md  implement.jsonl  implement.md  prd.md  task.json
.trellis/tasks/07-03-upload-install-progress/: check.jsonl  design.md  implement.jsonl  task.json
.trellis/tasks/07-06-push-docker-restart-fix/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/archive/2026-07/00-bootstrap-guidelines/: task.json
.trellis/tasks/archive/2026-07/07-02-localize-web-ui-chinese/: task.json
.trellis/tasks/archive/2026-07/07-02-python-management-platform/: task.json
.trellis/tasks/archive/2026-07/07-03-upload-install-progress/: implement.md  prd.md  task.json
.trellis/workspace/sobber/: index.md  journal-1.md
app/: __init__.py  config.py  database.py  dependency_inference.py  main.py  models.py  process_manager.py
app/static/: styles.css
app/templates/: dashboard.html  login.html
tests/: test_config.py  test_database.py  test_dependency_inference.py  test_pages.py  test_process_manager.py
